syntax = "proto3";

package rich_content;

import "common.proto";
import "google/protobuf/wrappers.proto";

message ButtonData {
    PluginContainerData container_data = 1;
    ButtonDesign design = 2;
    google.protobuf.StringValue text = 3;
    Link link = 4;
}

message ButtonDesign {
    google.protobuf.Int32Value border_radius = 1;
    google.protobuf.Int32Value border_width = 2;
    google.protobuf.StringValue text_color = 3;
    google.protobuf.StringValue background_color = 4;
    google.protobuf.StringValue border_color = 5;
}